--- a/grammar.html
+++ b/grammar.html
@@ -5,6 +5,12 @@
     <title>Title</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="forindex.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet">
+
+
     <meta name="viewport" content="width=device-width, initial-scale-1, maximum-scale=1">
 </head>
 <body class="bg-body2">
@@ -71,18 +77,19 @@
 <main>
 
     <div class="container2">
-        <div class="container">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Grammar course</li>
-                </ol>
-            </nav>
-        </div>
+
+    </div>
+    <div class="container">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Grammar course</li>
+            </ol>
+        </nav>
     </div>
 
     <div class="container">
-        <h1 class="display-1 text-center text-light">Grammar course</h1>
+        <h1 class="smalHeader text-center text-light">Grammar course</h1>
     </div>
 
     <div class="container mt-4 text-center text-light">
@@ -122,7 +129,7 @@
 
 
                 <div class="collapse show" id="text">
-                    <div class="row row-cols-md-auto g-3 align-items-center m-auto">
+                    <div class="row row-cols-md-auto g-3 align-items-center justify-content-center m-auto">
                         <div class="col-sm-auto rounded">
                             <a href="grammar/elementary/lesson1.html"
                                class="list-group-item list-group-item-action " aria-current="true">
@@ -165,7 +172,7 @@
                         </div>
                         <div class="col-sm-auto rounded">
                             <a href="reading/elementary/lesson1.html"
-                               class="list-group-item list-group-item-action " aria-current="true">
+                               class="list-group-item list-group-item-action" aria-current="true">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">Lesson 1</h5>
                                     <small>
@@ -291,7 +298,7 @@
         </div>
 
         <div class="container mt-4">
-            <div class="container p-3 rounded-3 shadow bg-primary bg-opacity-75">
+            <div class="container p-3 rounded-3 shadow bg-primary bg-opacity-75 ">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="d-flex flex-column">
 
@@ -322,7 +329,7 @@
 
 
                 <div class="collapse show" id="text2">
-                    <div class="row row-cols-md-auto g-3 align-items-center m-auto">
+                    <div class="row row-cols-md-auto g-3 align-items-center justify-content-center m-auto">
                         <div class="col-sm-auto rounded">
                             <a href="reading/elementary/lesson1.html"
                                class="list-group-item list-group-item-action " aria-current="true">
@@ -491,7 +498,7 @@
         </div>
 
         <div class="container mt-4">
-            <div class="container p-3 rounded-3 shadow bg-my2">
+            <div class="container p-3 rounded-3 shadow bg-my2" >
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="d-flex flex-column">
                         <div class="container">
@@ -520,7 +527,7 @@
 
 
                 <div class="collapse show" id="text3">
-                    <div class="row row-cols-md-auto g-3 align-items-center m-auto">
+                    <div class="row row-cols-md-auto g-3 align-items-center justify-content-center m-auto">
                         <div class="col-sm-auto rounded">
                             <a href="reading/elementary/lesson1.html"
                                class="list-group-item list-group-item-action " aria-current="true">
