--- a/reading.html
+++ b/reading.html
@@ -5,6 +5,12 @@
     <title>Title</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="forindex.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet">
+
+
     <meta name="viewport" content="width=device-width, initial-scale-1, maximum-scale=1">
 </head>
 <body class="bg-body2">
@@ -70,18 +76,19 @@
 </header>
 
 <div class="container2">
-    <div class="container">
-        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Reading course</li>
-            </ol>
-        </nav>
-    </div>
+
+</div>
+<div class="container">
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Reading course</li>
+        </ol>
+    </nav>
 </div>
 
 <div class="container">
-    <h1 class="display-1 text-center text-light">Reading course</h1>
+    <h1 class="text-center text-light smalHeader">Reading course</h1>
 </div>
 
 <div class="container mt-4 text-center text-light">
@@ -91,7 +98,7 @@
 
 <div class="bg-body pt-5 pb-5">
     <div class="container mt-1">
-        <div class="container p-3 rounded-3 shadow bg-body2">
+        <div class="container p-3 rounded-3 shadow bg-my1">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex flex-column">
                     <div class="container">
@@ -290,7 +297,7 @@
     </div>
 
     <div class="container mt-4">
-        <div class="container p-3 rounded-3 shadow bg-body2">
+        <div class="container p-3 rounded-3 shadow bg-primary bg-opacity-75">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex flex-column">
 
@@ -490,7 +497,7 @@
     </div>
 
     <div class="container mt-4">
-        <div class="container p-3 rounded-3 shadow bg-body2">
+        <div class="container p-3 rounded-3 shadow bg-my2">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex flex-column">
                     <div class="container">
