--- a/reading/elementary/lesson3.html
+++ b/reading/elementary/lesson3.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../article.html">Article</a>
+                        <a class="nav-link" href="../../blog.html">Article</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../aboutus.html">About us</a>
@@ -214,7 +214,7 @@
             <ul class="nav justify-content-center border-bottom border-secondary pb-3 mb-3">
                 <li class="nav-item"><a href="../../index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
-                <li class="nav-item"><a href="../../article.html" class="nav-link px-2 text-muted">Articles</a></li>
+                <li class="nav-item"><a href="../../blog.html" class="nav-link px-2 text-muted">Articles</a></li>
                 <li class="nav-item"><a href="../../aboutus.html" class="nav-link px-2 text-muted">About us</a></li>
 
             </ul>
