--- a/grammar/elementary/lesson1.html
+++ b/grammar/elementary/lesson1.html
@@ -72,15 +72,17 @@
 <main>
 
     <div class="container2">
-        <div class="container">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-                    <li class="breadcrumb-item "><a href="../../reading.html">Grammar course</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
-                </ol>
-            </nav>
-        </div>
+
+    </div>
+
+    <div class="container">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+                <li class="breadcrumb-item "><a href="../../reading.html">Grammar course</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+            </ol>
+        </nav>
     </div>
 
 
@@ -179,7 +181,7 @@
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-                <li class="breadcrumb-item "><a href="../../reading.html">Grammar course</a></li>
+                <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
             </ol>
         </nav>
