--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
                                             data-bs-target="#panelsStayOpen-collapseOne"
                                             aria-controls="panelsStayOpen-collapseOne">
                                         <div class="d-flex flex-column ">
-                                            <div class="container">
+                                            <div class="">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                      fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
                                                     <path d="M2 6h5v4H2V6z"/>
                                                     <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
                                                 </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Elementary</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -467,13 +467,15 @@
                                             data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapse2">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/bicycle.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle" viewBox="0 0 16 16">
+                                                    <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.623z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Intermediate</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -775,13 +777,15 @@
                                             data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapse4">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/book.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
+                                                    <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Advance</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -1126,13 +1130,16 @@
                                             data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapseThree">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/battery-half.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
+                                                    <path d="M2 6h5v4H2V6z"/>
+                                                    <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Elementary</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -1434,13 +1441,15 @@
                                             data-bs-target="#panelsStayOpen-collapse44" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapse44">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/bicycle.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle" viewBox="0 0 16 16">
+                                                    <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.623z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Intermediate</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -1742,13 +1751,15 @@
                                             data-bs-target="#panelsStayOpen-collapse55" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapse55">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/book.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
+                                                    <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Advance</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -2096,13 +2107,16 @@
                                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapseTwo">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/battery-half.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
+                                                    <path d="M2 6h5v4H2V6z"/>
+                                                    <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Elementary</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -2404,13 +2418,15 @@
                                             data-bs-target="#panelsStayOpen-collapse3" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapse3">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/bicycle.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle" viewBox="0 0 16 16">
+                                                    <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.623z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Intermediate</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
@@ -2712,13 +2728,15 @@
                                             data-bs-target="#panelsStayOpen-collapse5" aria-expanded="true"
                                             aria-controls="panelsStayOpen-collapse5">
                                         <div class="d-flex flex-column">
-                                            <div class="container">
-                                                <img src="res/book.svg">
+                                            <div class="">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
+                                                    <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+                                                </svg>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <h2>Advance</h2>
                                             </div>
-                                            <div class="container">
+                                            <div class="">
                                                 <p>5 lessons</p>
                                             </div>
                                         </div>
