--- a/listerning.html
+++ b/listerning.html
@@ -98,7 +98,7 @@
 
     <div class="bg-body pt-5 pb-5">
         <div class="container mt-1">
-            <div class="container p-3 rounded-3 shadow bg-my1">
+            <div class="container p-3 rounded-3 shadow bg-primary bg-opacity-75">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="d-flex flex-column">
                         <div class="container">
@@ -497,7 +497,7 @@
         </div>
 
         <div class="container mt-4">
-            <div class="container p-3 rounded-3 shadow bg-my2">
+            <div class="container p-3 rounded-3 shadow bg-primary bg-opacity-75">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="d-flex flex-column">
                         <div class="container">
