--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="forindex.css" rel="stylesheet">
 </head>
-<body class="bg-body">
+<body class="bg-body3">
 
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-nav">
@@ -73,18 +73,7 @@
 <div class="container2">
 
 </div>
-<div class="container">
-    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">About us</li>
-        </ol>
-    </nav>
-</div>
 
-<div class="container text-center p-2 shadow bg-body2 rounded">
-    <h1 class="mt-2 mb-3 smalHeader text-light">About</h1>
-</div>
 
 <div class="mt-5 row row-cols-md-auto g-3 m-auto align-items-center justify-content-center w-75 mt-2">
     <div class="col-sm-auto bg-nav shadow p-1 rounded m-1">
@@ -121,9 +110,7 @@
             </a>
         </div>
     </div>
-    <div class="container bg-my1">
-        <p class="p-3 rounded text-light">Try to do our best work</p>
-    </div>
+
     <div class="col-sm-auto bg-nav shadow p-1 rounded m-1 ">
         <div class="text-center">
             <img class="img-fluid" src="res/fotoMasha.jpg" width="250">
@@ -158,9 +145,7 @@
             </a>
         </div>
     </div>
-    <div class="container bg-my2">
-        <p class="p-3 rounded text-light">Sky the limit</p>
-    </div>
+
 </div>
 
 
