--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="forindex.css" rel="stylesheet">
 </head>
-<body class="bg-body2">
+<body class="bg-body3">
 
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-nav">
@@ -82,10 +82,10 @@
 </div>
 
 <div class="container text-center">
-    <h1 class="mt-2 mb-3 smalHeader text-light ">Blog</h1>
+    <h1 class="mt-2 mb-3 smalHeader">Blog</h1>
 </div>
 
-<div class="bg-body p-5">
+<div class="bg-body3 p-5">
     <div class="container-md">
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
