--- a/reading.html
+++ b/reading.html
@@ -13,7 +13,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale-1, maximum-scale=1">
 </head>
-<body class="bg-body2">
+<body class="bg-body3">
 
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-nav">
@@ -88,15 +88,15 @@
 </div>
 
 <div class="container">
-    <h1 class="text-center text-light smalHeader">Reading course</h1>
+    <h1 class="text-center smalHeader">Reading course</h1>
 </div>
 
-<div class="container mt-4 text-center text-light">
+<div class="container mt-4 text-center">
     <p class="lead">Here something about grammar course
     </p>
 </div>
 
-<div class="bg-body pt-5 pb-5">
+<div class="bg-body3 pt-5 pb-5">
     <div class="container mt-1">
         <div class="container p-3 rounded-3 shadow bg-my1">
             <div class="d-flex justify-content-between align-items-center">
