--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed bg-my1 text-light" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-50 text-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapseOne">
                         <h2>Culture </h2>
@@ -155,7 +155,7 @@
 
             <div class="accordion-item mt-3">
                 <h2 class="accordion-header " id="panelsStayOpen-headingTwo">
-                    <button class="accordion-button collapsed bg-my1 text-light" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed bg-secondary bg-opacity-50 text-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseTwo">
                         <h2>Languages</h2>
